--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
     <br />
     <h6>EDUCATION</h6>
     <hr />
-    <h6>Ashesi University College</h6>
-    <p>Bsc. Business administration</p>
-    <div class="two">
-      <h6>Accra,Greater Accra</h6>
-      <p>August 2004 - May 2007</p>
+    <div class="flex1">
+      <div>
+        <h6>Ashesi University College</h6>
+        <p>Bsc. Business administration</p>
+      </div>
+      <div class="two">
+        <h6>Accra,Greater Accra</h6>
+        <p>August 2004 - May 2007</p>
+      </div>
     </div>
     <ul>
       <li>Relevant courses: Social Theory, Entrepreneurship, Marketing</li>
@@ -39,20 +43,25 @@
     <br />
     <h6>WORK EXPERIENCE</h6>
     <hr />
-    <div>
-      <h6>SUMMER INTERN, ABC LIMITED</h6>
-      <ul>
-        <li>
-          Prepared financial valuations and modeling for Access Bank, Nigeria
-        </li>
-        <li>Prepared 5-year financial projections for Access Bank, Nigeria</li>
-        <li>Prepared business summary for a Business Plan for funding</li>
-      </ul>
+    <div class="flex1">
+      <div>
+        <h6>SUMMER INTERN, ABC LIMITED</h6>
+        <ul>
+          <li>
+            Prepared financial valuations and modeling for Access Bank, Nigeria
+          </li>
+          <li>
+            Prepared 5-year financial projections for Access Bank, Nigeria
+          </li>
+          <li>Prepared business summary for a Business Plan for funding</li>
+        </ul>
+      </div>
+      <div class="three">
+        <h6>Accra, Greater Accra</h6>
+        <p>July- Aug, 2007</p>
+      </div>
     </div>
-    <div class="three">
-      <h6>Accra, Greater Accra</h6>
-      <p>July- Aug, 2007</p>
-    </div>
+
     <br />
     <h6>OTHER SKILLS</h6>
     <hr />
